# pdf-scripts

./: .editorconfig  .gitignore  LICENSE  Pipfile  README.md  clean_metadata_pdf.sh  compress_pdf.sh  is_ocrd_pdf.sh  is_scanned_pdf.sh  ocr_pdf.sh  pipeline.sh  pyproject.toml  reduce_pdf_size.sh  reduce_size_pdf.sh  remove_text_pdf.sh  repair_pdf.sh  setup.sh  sort_digital_analog.sh  verify_pdf.sh
crop/: crop.sh  crop_images.py  middle.sh  split_middle.py
sort_by/: sort_by_lang.py  sort_ocrd_pdfs.sh
utils/: flatten_dir.sh  large_files.sh  normalize_files.sh  pages_with_text.py  prepend_index_files.py  remove_text_pdf.sh
wrangle_pdf/: everyother.sh  merge_even_odd.sh  reverse.sh  split_double_pages.sh
