[tool.poetry]
name = "pdf-scripts"
version = "0.0.0"
description = ""
authors = ["Johannes Filter <hi@jfilter.de>"]

[tool.poetry.dependencies]
python = "^3.9"
fasttext = "*"
pdftotext = "*"
tqdm = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
