[tool.poetry]
name = "pdf-scripts"
version = "0.0.0"
description = ""
authors = ["Johannes Filter <hi@jfilter.de>"]

[tool.poetry.dependencies]
python = "^3.8"
fasttext = "*"
pdftotext = "*"
tqdm = "*"
opencv-python = "^4.4.0"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
